--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!--Import Google Icon Font-->
-    <link href="./assets/tableCss.css" rel="stylesheet"/>
+    <!-- <link href="./assets/tableCss.css" rel="stylesheet"/> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.css">
@@ -19,8 +19,8 @@
     <app-root></app-root>
 
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="./assets/tableScript.js"></script>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+    <!-- <script type="text/javascript" src="./assets/tableScript.js"></script> -->
 
   </body>
 
